syntax = "proto2";

option java_package = "com.rwproto";
option java_outer_classname = "PlayerServiceProtos";
message PlayerEnum {
	enum EPlayerRequestType {
		COMMON_MESSAGE = 0;//公共信息请求
	}

	enum EPlayerResulttType {
		SUCCESS = 0; //
		FAIL = 1; //
	}
}

message TagPalyerRoleDataBuf {
	optional string templateId = 41; //templateId
	optional string playerUUID = 1; //id
	optional int32 sex = 2; //性别...
	optional int64 coin = 3; //铜钱...
	optional int32 gold = 4; //金币...
	optional int32 vipLevel = 5; //Vip等级...
	optional int32 power = 6; //当前体力
	optional int32 maxPower = 7; //最大体力
	optional string headImage = 8; //头像
	optional int32 level = 9;//等级
	optional string name = 10;//名称

	optional int32 battleForce = 11;//战力
	optional int64 currentExp = 12;//当前经验
	optional int64 upgradeExp = 13;//升级经验
	optional float hpGrowUp = 14; // 生命成长...
	optional float attackGrowUp = 15; // 攻击成长...
	optional float physicqueDefGrouUp = 16; // 体魄防御成长...
	optional float spiritDefGrowUP = 17; // 精神防御成长...

	optional int32 maxHP = 18; // 最大生命值...
	optional int32 maxEnergyVal = 19; // 最大能量值...
	optional int32 physiqueAttackVal = 20; // 体魄攻击...
	optional int32 spiritAttackVal = 21; // 精神攻击...
	optional int32 physiqueDef = 22; // 体魄防御...
	optional int32 spiritDef = 23; // 精神防御...
	optional int32 attackVampire = 24; // 攻击吸血...
	optional int32 criticalVal = 25; // 暴击率...
	optional int32 criHamPromot = 26; // 暴击伤害提升...
	optional int32 toughnessVal = 27; // 韧性...
	optional int32 hPReceiveVal = 28; // 生命回复...
	optional int32 energyReceiveVal = 29; // 能量回复...
	optional int32 energyTransVal = 30; // 能量转化...
	optional float attackDistance = 31; // 攻击距离...
	optional float attackSpeed = 32; // 攻击速度...
	optional float moveSpeed = 33; // 移动速度...
	optional int32 jobLevel = 34; //职业等级...
	repeated TagSkillRecord tagSkillRecord = 35;//技能记录
    optional int32 skillRecoverTime = 36;//技能回复时间

    optional int32 energyReceivePromote = 37; // 能量值回复提升...
	optional int32 maxLifePromte = 38; // 最大生命值提升...
	optional int32 spiritDefPromte = 39;// 精神防御提升...
	optional int32 attackPromte = 40;// 攻击力提升...
    optional int32 rookieFlag = 42;// 新手标志...
	optional int32 buyCoinTimes = 43;//铜钱购买次数...
	optional int32 currentHP = 44; //当前生命值...
	optional int32 modelId = 45; //当前生命值...
	optional int32 freeChat = 46;//免费聊天次数...
	optional int32 baseEnergyReceive = 47;//
	optional int32 attackEnergy = 48;
	optional int32 struckEnergy = 49;
	optional string attackId = 50;
	optional int32 careerType = 51;//职业...
	optional int32 fighting = 52;//战斗力...
	optional int64 freeChangeInfoTime = 53;//免费信息变更倒计时
	
	optional int32 attackType = 54;//攻击类型
	optional int32 attackHurt = 55;//攻击伤害
	optional int32 cutHurt = 56;//伤害减免
	optional int32 cutCritHurt = 57;//暴击伤害减免
	optional int32 resist = 58;//抵抗
	optional int32 addCure = 59;//受到治疗效果增加
	optional int32 cutCure = 60;//受到治疗效果减少
}


/*
message TagWorldMapInfo{
    repeated TagUserMapInfo tagUserMapInfo = 1;
    optional int32 reset =2;//是否重置
}

message TagUserMapInfo{
    required int32 mapId = 1;//地图ID
    required string levelId =2;//当前地图关卡
}*/


message TagSkillRecord{
	optional string skillId = 1;//技能
	optional int32 level =2;//技能等级
	optional int32 order = 3;//位置
}

message MsgPlayerRequest {
	optional PlayerEnum.EPlayerRequestType requestType = 1;
}

message MsgPlayerResponse {
	optional MsgPlayerRequest request = 1;
	optional PlayerEnum.EPlayerResulttType result = 2;
	optional TagPalyerRoleDataBuf plyerRoleData = 3;
	//optional TagWorldMapInfo tagWorldMapInfo = 4;	
}
