syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "StoreProtos";

enum eStoreRequestType {
	BuyCommodity = 1;
	RefreshStore = 2;
	OpenStore = 3;  
	SyncStore=4;
	ProbStore = 5;
	WakenRewardDraw = 6;
	WakenExchange = 7;
	RefreshExchangeItem = 8;
}

enum eWakenRewardDrawType{
	oneDraw = 1;   //µ¥³é
	tenDraw = 2;   //Ê®Á¬³é
}

enum eProbType{
	Open = 1;
	Close = 2;
}

enum eStoreResultType {
	SUCCESS=0;
	FAIL=1;
	HasTip = 2;
	NoTip = 3;
}

message tagCommodity{
	optional int32 id = 1;
	optional int32 count = 2;
	optional int32 solt = 3;
	optional int32 exchangeCount = 4;
}
message tagStore{
	optional int32 type = 1;
	optional int32 refreshNum = 2;
	optional int64 retime = 3;
	optional int32 existType = 5;
	repeated tagCommodity commodity = 4;
}
message tagReward{
	optional int32 modelId = 1;
	optional int32 count = 2;
}

message StoreRequest {
	required eStoreRequestType requestType = 1;
    optional int32 storeType = 2;
    optional tagCommodity commodity = 3;
	optional eWakenRewardDrawType drawType = 4;
	optional int32 consumeType = 5;
}

message StoreResponse {
	optional eStoreRequestType requestType = 1;
	optional eStoreResultType reslutType = 2;
	optional string reslutValue = 3;
	optional tagCommodity commodity = 4;
	repeated tagStore store = 5;
	optional int32 storeType = 6;
	optional eProbType probType = 7;
	optional int32 costType = 8;
	repeated tagReward rewards = 9;
}